Fix z-index shadowbox

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -707,3 +707,7 @@ table caption{
 blockquote{
 	font-size: 13px
 }
+
+#sb-container{
+	z-index: 99999999 !important
+}
